Fixed Server List Overlapping Folders

--- a/source/naivesource.css
+++ b/source/naivesource.css
@@ -51,7 +51,7 @@ body{
 /* --- */
 /* ServerList */
 .listItem-GuPuDH {
-    margin-top: 12px;
+  margin-top: 6px;
 }
 /* --- */
 
